updated for fa20 staff

--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -7,9 +7,10 @@
 #     - Class begins!
 #     - Sign-up for [lab and section times](https://goo.gl/forms/zulZXeFLR1hhu1mh2).
 #     - Sign-up for [Piazza](https://piazza.com/berkeley/spring2018/data100).
-- date: 01/28/2020
-  text: |
-    - Labs will be released Tuesday evenings and are due Thursdays at 11:59 PM
+
+# - date: 01/28/2020
+#   text: |
+#     - Labs will be released Tuesday evenings and are due Thursdays at 11:59 PM
   # - The midterm is happening remotely on Thurs March 12th at 9:30 AM
   # - There is no lab assignment this week
   # - HW 3 has been released and is due Thursday, March 5th before lecture (9:29 AM)
