--- a/_data/instructors.yml
+++ b/_data/instructors.yml
@@ -1,11 +1,11 @@
-- email: hardt@berkeley.edu
-  image: https://www2.eecs.berkeley.edu/Faculty/Photos/Homepages/mhardt.jpg
-  name: Moritz Hardt
+- email: michael_jordan@berkeley.edu
+  image: https://people.eecs.berkeley.edu/~jordan/jordan_small.jpg
+  name: Michael Jordan
   oh_info:
-  - "OH: W 4-5 (Soda 525)"
+  - "OH: TBD"
 - email: jsteinhardt@berkeley.edu
   image: https://www.stat.berkeley.edu/~jsteinhardt/photo.png
   name: Jacob Steinhardt
   oh_info:
-  - "OH: Th 11-12 (Evans 325)"
+  - "OH: TBD"
 
