--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ permalink: /:categories/:year/:month/:day/:title
 exclude: ["readme.md"]
 highlighter: rouge
 
-title: Data 102 Sp 20
+title: Data 102 Fall 20
 tagline: Principles and Techniques of Data Science
 
 baseurl: /
