ohs and titel nit

--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -3,7 +3,7 @@
   oh_info:
   - "Disc: TBD"
   - "Lab: TBD"
-  - "OH: TBD"
+  - "OH: Tuesdays (exact time TBD)"
   name: Mihaela Curmei
 - email: soloff@berkeley.edu
   image: http://jake-soloff.github.io/jake.jpg
@@ -17,19 +17,18 @@
   oh_info:
   - "Disc: TBD"
   - "Lab: TBD"
-  - "OH: TBD"
+  - "OH: Thursday evenings (exact time TBD)"
   name: Yimeng (Kobe) Wang
 - email: clarafy@berkeley.edu
   image: https://clarafy.github.io/images/profile.jpg
   oh_info:
   - "Disc: TBD"
   - "Lab: TBD"
-  - "OH: TBD"
   name: Clara Wong-Fannjiang
 - email: banghua@berkeley.edu
   image: https://people.eecs.berkeley.edu/~banghua/photos/bio.jpg
   oh_info:
   - "Disc: TBD"
   - "Lab: TBD"
-  - "OH: TBD"
+  - "OH: Thursday mornings (exact time TBD)"
   name: Banghua Zhu
