--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -10,15 +10,16 @@
   oh_info:
   - "Disc: TBD"
   - "Lab: TBD"
-  - "OH: TBD"
+  - "Thursday evenings (exact time TBD)"
   name: Jake Soloff
 - email: wangyimeng98@berkeley.edu
   image: http://ds100.org/fa19/resources/assets/staff_pics/yimeng_wang.png
   oh_info:
   - "Disc: TBD"
   - "Lab: TBD"
-  - "OH: Thursday evenings (exact time TBD)"
+  - "OH: Fridays (exact time TDB)"
   name: Yimeng (Kobe) Wang
+
 - email: clarafy@berkeley.edu
   image: https://clarafy.github.io/images/profile.jpg
   oh_info:
