--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -34,5 +34,5 @@
   oh_info:
   - "Disc: TBD"
   - "Lab: TBD"
-  - "OH: Thursday mornings (exact time TBD)"
+  - "OH: Thursday 9am PT"
   name: Banghua Zhu
