--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -48,7 +48,7 @@
   resources: |
     - [**Notes**](assets/notes/notes02.pdf)
   discussion: |
-    - Disc 1
+    - [Disc 1](assets/disc/disc01/disc01.pdf)
 
 - date: Thursday 9/3/20
   topic: Neyman-Pearson Lemma
