--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -2,7 +2,7 @@
   image: https://mcurmei627.github.io/images/profile.jpg
   oh_info:
   - "Disc: TBD"
-  - "Lab: TBD"
+  - "Lab: Mondays 12pm-2pm"
   - "OH: Tuesdays 1pm PT"
   name: Mihaela Curmei
 
@@ -10,7 +10,7 @@
   image: http://jake-soloff.github.io/jake.jpg
   oh_info:
   - "Disc: TBD"
-  - "Lab: TBD"
+  - "Lab: Mondays 2pm-3pm, 4pm-5pm"
   - "Thursday 5pm PT"
   name: Jake Soloff
 
@@ -18,7 +18,7 @@
   image: http://ds100.org/fa19/resources/assets/staff_pics/yimeng_wang.png
   oh_info:
   - "Disc: TBD"
-  - "Lab: TBD"
+  - "Lab: Mondays 3pm-4pm"
   - "OH: Fridays 10am PT"
   name: Yimeng (Kobe) Wang
 
@@ -33,6 +33,6 @@
   image: https://people.eecs.berkeley.edu/~banghua/photos/bio.jpg
   oh_info:
   - "Disc: TBD"
-  - "Lab: TBD"
+  - "Lab: Mondays 8am-10am"
   - "OH: Thursday 8:30am PT"
   name: Banghua Zhu
