--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -70,6 +70,9 @@
     We also review the Bayesian and frequentist approahces to decision-making.
   resources: |
     - [**Notes on Online FDR**](assets/notes/notes_online_FDR.pdf)
+  discussion: |
+    - [Disc 2](assets/disc/disc02/disc02.pdf)
+    - [Disc 2 Solutions](assets/disc/disc02/disc02_sol.pdf)
 
 - date: Thursday 9/10/20
   topic: Fairness in Decision-Making
