--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -67,9 +67,9 @@
   topic: Online False Discovery Rate Control
   slides: assets/lectures/lecture4.pdf
   description: We consider how to extend FDR control to the online setting, and introduce the LORD algorithm.
-    We also review the Bayesian and frequentist approahces to decision-making.
+    We also begin to review the Bayesian and frequentist approahces to decision-making.
   resources: |
-    - [**Notes on Online FDR**](assets/notes/notes_online_FDR.pdf)
+    - [**Notes**](assets/notes/notes_online_FDR.pdf)
   discussion: |
     - [Disc 2](assets/disc/disc02/disc02.pdf)
     - [Disc 2 Solutions](assets/disc/disc02/disc02_sol.pdf)
