--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -19,4 +19,6 @@
 # Welcome to the course! We're looking forward to spending a great semester with you!
 # - Please sign up for [Piazza](https://piazza.com/class/k5ofad3nps24c1)
 
-
+- date: 09/10/2020
+  text: |
+  - If you are requesting an extension for a HW or lab assignment (due to either DSP accommodations or other extenuating circumstances),please email any of the GSIs prior to the original deadline date. Please avoid emailing the professors.
