adding lab 2 update

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -85,6 +85,9 @@
 
 - date: 9/15/20
   topic: Review of Bayesian Modeling
+  lab: |
+    - [Lab 2 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab2/): _Due Tuesday Sep 15th, 11:59PM on Gradescope_
+
 
 - date: 9/17/20
   topic: Graphical Models
