--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -84,6 +84,10 @@
 
 - date: 9/15/20
   topic: Review of Bayesian Modeling
+  slides: assets/lectures/lecture6.pdf
+  resources: |
+    - [Bayes Introduction Jupyter notebook](assets/lectures/bayes_intro.ipynb)
+    - [galton.csv](assets/lectures/galton.csv)
   lab: |
     - [Lab 2 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab2/): _Due Tuesday Sep 15th, 11:59PM on Gradescope_
     - [Lab 1 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab1/)
