--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -82,7 +82,7 @@
     - [**Notes (Fairness in Decision-Making)**](assets/notes/notes05.pdf)
 
 
-- date: 9/15/20
+- date: Tuesday 9/15/20
   topic: Review of Bayesian Modeling
   slides: assets/lectures/lecture6.pdf
   resources: |
