--- a/_data/announcements.yml
+++ b/_data/announcements.yml
@@ -21,4 +21,4 @@
 
 - date: 09/10/2020
   text: |
-    - If you are requesting an extension for a HW or lab assignment (due to either DSP accommodations or other extenuating circumstances), please email any of the GSIs prior to the original deadline date. Please avoid emailing the professors.
+    - If you are requesting an extension for a HW or lab assignment (due DSP accommodations), please email any of the GSIs prior to the original deadline date. Please avoid emailing the professors.
