--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -117,6 +117,9 @@
 
 - date: 9/24/20
   topic: MCMC and Gibbs Sampling
+  slides: assets/lectures/lecture9.pdf
+  resources: |
+    - [Gibbs Sampling Jupyter notebook](assets/lectures/gibbs_sampling.ipynb)
   homework: |
     - [HW 2 released](assets/hw/hw2/hw02.zip)
 
