--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -125,6 +125,10 @@
 
 - date: 9/29/20
   topic: Regression (Bayesian)
+  lab: |
+    - [Lab 4 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab4/): _Due Wednesday Sep 30th, 11:59PM on Gradescope_
+    - [Lab 3 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab2/)
+
 
 - date: 10/1/20
   topic: Regression (Frequentist)
