--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -102,7 +102,7 @@
   resources: |
     - [Notes (Sections 9.1-9.3)](assets/notes/notes09.pdf)
 
-- date: 9/22/20
+- date: Tuesday 9/22/20
   topic: Rejection Sampling and Markov Chains
   slides: assets/lectures/lecture8.pdf
   resources: |
@@ -115,7 +115,7 @@
     - [Disc 4 Solutions](assets/disc/disc04/DIS4_SOL.pdf)
 
 
-- date: 9/24/20
+- date: Thursday 9/24/20
   topic: MCMC and Gibbs Sampling
   slides: assets/lectures/lecture9.pdf
   resources: |
@@ -123,8 +123,11 @@
   homework: |
     - [HW 2 released](assets/hw/hw2/hw02.zip)
 
-- date: 9/29/20
+- date: Tuesday 9/29/20
   topic: Regression (Bayesian)
+  slides: assets/lectures/lecture10.pdf
+  resources: |
+    - [Bayesian Regression Jupyter notebook](assets/lectures/lecture10.ipynb)
   lab: |
     - [Lab 4 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab4/): _Due Wednesday Sep 30th, 11:59PM on Gradescope_
     - [Lab 3 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab2/)
