--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -131,6 +131,9 @@
   lab: |
     - [Lab 4 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab4/): _Due Wednesday Sep 30th, 11:59PM on Gradescope_
     - [Lab 3 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab2/)
+  discussion: |
+    - [Disc 5](assets/disc/disc05/DIS5.pdf)
+    - [Disc 5 Solutions](assets/disc/disc04/DIS5_SOL.pdf)
 
 
 - date: 10/1/20
