--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -127,7 +127,7 @@
   topic: Regression (Bayesian)
   lab: |
     - [Lab 4 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab4/): _Due Wednesday Sep 30th, 11:59PM on Gradescope_
-    - [Lab 3 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab2/)
+    - [Lab 3 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab3/)
 
 
 - date: 10/1/20
@@ -135,6 +135,11 @@
 
 - date: 10/6/20
   topic: Bootstrap
+  lab: |
+    - [Lab 5 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab5/): _Due Wednesday Sep 30th, 11:59PM on Gradescope_
+    - [Lab 4 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab4/)
+
+
 
 - date: 10/8/20
   topic: Causal Inference I
@@ -195,3 +200,5 @@
 
 - date: 12/15/20
   topic: Final Exam
+
+ Z_bar + (1 / sqrt(1 + ((hk**2) / X_var))) * (Z_star - Z_bar + (hk * epsilon))
