--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -147,6 +147,7 @@
 
 - date: 10/8/20
   topic: Causal Inference I
+  slides: assets/lectures/lecture13.pdf
 
 - date: 10/13/20
   topic: Causal Inference II
