--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -139,6 +139,7 @@
 
 - date: 10/6/20
   topic: Bootstrap
+  slides: assets/lectures/lecture12_note.pdf
   lab: |
     - [Lab 5 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab5/): _Due Thursday Oct 8th, 11:59PM on Gradescope_
     - [Lab 4 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab4/)
