--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -143,7 +143,8 @@
   lab: |
     - [Lab 5 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab5/): _Due Thursday Oct 8th, 11:59PM on Gradescope_
     - [Lab 4 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab4/)
-
+  homework: |
+    - [HW 3 released](assets/hw/hw03.zip)
 
 
 - date: 10/8/20
