--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -153,7 +153,8 @@
 
 - date: 10/13/20
   topic: Causal Inference II
-   lab: |
+  slides: assets/lectures/lecture14.pptx
+  lab: |
     - [Lab 6 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab6/): _Due Thursday Oct 15th, 11:59PM on Gradescope_
     - [Lab 5 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab5/)
 
