--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -167,6 +167,10 @@
 
 - date: 10/22/20
   topic: Concentration Inequalities
+   lab: |
+    - [Lab 7 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab7/): _Due Thursday Oct 15th, 11:59PM on Gradescope_
+    - [Lab 6 solutions released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab6/)
+
 
 - date: 10/27/20
   topic: Bandits I
