--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -189,6 +189,7 @@
 
 - date: Tuesday 10/27/20
   topic: Bandits I
+  slides: assets/lectures/lecture18.pptx
 
 - date: Thursday 10/29/20
   topic: Bandits II
