--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -182,6 +182,8 @@
   slides: assets/lectures/lecture17.pdf
   resources: |
     - [Concentration Inequalities Notebook](assets/lectures/lecture17.ipynb)
+  homework: |
+              - [HW 4 released](assets/hw/hw4/hw04.zip)
 
 - date: Tuesday 10/27/20
   topic: Bandits I
