--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -109,7 +109,6 @@
   slides: assets/lectures/lecture8.pdf
   resources: |
     - [Rejection Sampling Jupyter notebook](assets/lectures/rejection_sampling.ipynb)
-  notes: |
     - [Notes on Rejection Sampling (Sections 10.1-10.2)](https://data102.org/sp20/assets/notes/notes10.pdf)
   lab: |
     - [Lab 3 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab3/): _Due Tuesday Sep 22nd, 11:59PM on Gradescope_
@@ -124,7 +123,6 @@
   slides: assets/lectures/lecture9.pdf
   resources: |
     - [Gibbs Sampling Jupyter notebook](assets/lectures/gibbs_sampling.ipynb)
-  notes: |
     - [Notes](https://data102.org/sp20/assets/notes/notes11.pdf)
   homework: |
     - [HW 2 released](assets/hw/hw2/hw02.zip)
@@ -150,7 +148,7 @@
 - date: Tuesday 10/6/20
   topic: Bootstrap
   slides: assets/lectures/lecture12_note.pdf
-  notes: |
+  resources: |
     - [Notes](https://data102.org/sp20/assets/notes/notes26.pdf)
   lab: |
     - [Lab 5 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab5/): _Due Thursday Oct 8th, 11:59PM on Gradescope_
@@ -165,13 +163,13 @@
 - date: Thursday 10/8/20
   topic: Causal Inference I
   slides: assets/lectures/lecture13.pdf
-  notes: |
+  resources: |
     - [Notes](https://data102.org/sp20/assets/notes/notes13.pdf)
 
 - date: Tuesday 10/13/20
   topic: Causal Inference II
   slides: assets/lectures/lecture14.pptx
-  notes: |
+  resources: |
     - [Notes on Propensity Scores (Section 14.3)](https://data102.org/sp20/assets/notes/notes14.pdf)
   lab: |
     - [Lab 6 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab6/): _Due Thursday Oct 15th, 11:59PM on Gradescope_
@@ -201,11 +199,10 @@
 - date: Tuesday 10/27/20
   topic: Bandits I
   slides: assets/lectures/lecture18.pptx
-  notes: |
-    - [Notes](https://data102.org/sp20/assets/notes/notes17.pdf)
   resources: |
     - [Interactive UCB Code](assets/lectures/UCB_interactive.py)
     - [UCB Demo Notebook](assets/lectures/UCB_demo.ipynb)
+    - [Notes](https://data102.org/sp20/assets/notes/notes17.pdf)
   discussion: |
     - [Disc 8](assets/disc/disc08/DIS8.pdf)
     - [Disc 8 Solutions](assets/disc/disc08/DIS8_SOL.pdf)
