--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -225,6 +225,7 @@
 
 - date: Thursday 11/5/20
   topic: Game Theory
+  slides: assets/lectures/lecture21.pptx
 
 - date: Tuesday 11/10/20
   topic: Reinforcement Learning I
