--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -237,8 +237,7 @@
     - [Disc 10](assets/disc/disc10/DIS10.pdf)
     - [Disc 10 Solutions](assets/disc/disc10/DIS10_SOL.pdf)
   lab: |
-    - [Lab 9 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab9/
-)_Due Thursday Nov 12th, 11:59PM on Gradescope_
+    - [Lab 9 released](http://data102.datahub.berkeley.edu/hub/user-redirect/git-sync?repo=https://github.com/ds-102/fa20&subPath=lab/lab9/)_Due Thursday Nov 12th, 11:59PM on Gradescope_
 
 - date: Thursday 11/12/20
   topic: Reinforcement Learning II
